uppfært násmefni viku 2

--- a/namsefni/02.nodejs/2.events.md
+++ b/namsefni/02.nodejs/2.events.md
@@ -18,7 +18,7 @@ title: Node.js og atburðir
 
 ***
 
-Node.js er sjálfgefið keyrt í __einum process__, þar sem CPU er yfirleitt ekki það sem takmarkar
+Node.js er sjálfgefið keyrt í _einum process_, þar sem CPU er yfirleitt ekki það sem takmarkar
 
 * IO og network er margfalt hægara en að vinna á CPU
 * Notum ekki þræði fyrir okkar kóða, þó þeir séu notaðir innan Node.js
