--- a/namsefni/02.nodejs/3.apis.md
+++ b/namsefni/02.nodejs/3.apis.md
@@ -58,7 +58,7 @@ title: Node.js APIs
 * Sækjum með annaðhvort:
   * [CommonJS modules](https://nodejs.org/api/modules.html): `require('<nafn á module>);`
   * [ECMAScript (ES) modules](https://nodejs.org/api/esm.html): `import module from 'module';`
-* Sjá umfjöllun um [einingar](../modules/)
+* Sjá umfjöllun um [einingar](../03.modules/readme.md)
 
 ***
 
