--- a/namsefni/04.testing/1.testing.md
+++ b/namsefni/04.testing/1.testing.md
@@ -15,7 +15,21 @@ title: Fyrirlestur – Prófanir
 * Þegar við skrifum kóða erum við alltaf að athuga hvernig hann virkar
 * Gerum það yfirleitt handvirkt
 * Getum eytt tíma og skrifað próf fyrir þessa handvirku athugun
-* Höfum séð aðeins með `console.assert()`
+* Getum í grunninn gert með `console.assert()`
+
+## `console.assert()`
+
+* Útbúm staðhæfing (assertion) um eitthvað sem skilar `true` eða `false`
+* Ef `false` er skilað, skrifast út villuskilaboð í console, hugsanlega með heiti sem öðru argument
+
+```javascript
+console.assert(1 + 1 === 2, '1 + 1 er 2');
+// ekkert skrifast út því staðhæfingin er sönn
+
+console.assert(1 + 1 === 3, '1 + 1 er 3');
+// Villa skrifast út í console:
+// Assertion failed: 1 + 1 er 3
+```
 
 ***
 
@@ -80,11 +94,11 @@ title: Fyrirlestur – Prófanir
 ## Arrange, Act, Assert
 
 ```javascript
-const input = 'bar';           // Arrange
+const input = 'bar'; // Arrange
 
 const result = reverse(input); // Act
 
-assert(result === 'rab');      // Assert
+assert(result === 'rab'); // Assert
 ```
 
 ***
@@ -109,6 +123,7 @@ assert(result === 'rab');      // Assert
 * Virkar með allskonar, t.d.: JavaScript, React, TypeScript, Node
 * Sækjum með
   * `npm install --save-dev jest`
+  * `npm install --save-dev @jest/globals` // fyrir skilgreiningar
 
 ***
 
@@ -153,15 +168,3 @@ Til að geta prófað kóða skrifaðann fyrir JavaScript modules, þurfum við 
 * Höldum `main` alltaf í _deployable_ ástandi
 * Hægt að gefa út oft á dag
 * Netlify uppsetningar, eins og við höfum verið að nota þær, nýta continuous deployment
-
-***
-
-## Netlify
-
-* Getum stillt þannig að Netlify keyri prófin okkar _áður_ en gefið út
-* Svo lengi sem testin okkar grípa ákveðnar villur, munu þær ekki komast út á raunkerfi
-* Fáum aukið öryggi í continuous deployment ferlið okkar
-
-***
-
-[Netlify CI dæmi](https://github.com/vefforritun/vef1-2021-netlify-ci)
