--- a/namsefni/02.nodejs/4.fs.md
+++ b/namsefni/02.nodejs/4.fs.md
@@ -12,21 +12,21 @@ title: Node.js Filesystem
 
 ## Filesystem
 
-* Node.js getur talað við skráarkerfið með [`fs`](https://nodejs.org/api/fs.html)
-  * Les innihald mappa, les skrár, býr til skrár, breyta skrár o.fl.
-  * Skilar gögnum í `Buffer`
-* `fs.readFile(file, encoding, callback)`
-* `fs.writeFile(file, data, callback)`
+- Node.js getur talað við skráarkerfið með [`fs`](https://nodejs.org/api/fs.html)
+  - Les innihald mappa, les skrár, býr til skrár, breyta skrár o.fl.
+  - Skilar gögnum í `Buffer`
+- `fs.readFile(file, encoding, callback)`
+- `fs.writeFile(file, data, callback)`
 
-***
+---
 
 ## Ekki-blokkandi I/O – Async I/O
 
-* I/O er hægt m.v. annað sem við gerum
-* Þegar við biðjum um I/O í Node.js sendum við atburði sem verða keyrðir þegar stýrikerfi er búið
-* Þurfum því ekki að bíða! Gerum eitthvað nytsamlegt á meðan
+- I/O er hægt m.v. annað sem við gerum
+- Þegar við biðjum um I/O í Node.js sendum við atburði sem verða keyrðir þegar stýrikerfi er búið
+- Þurfum því ekki að bíða! Gerum eitthvað nytsamlegt á meðan
 
-***
+---
 
 ## Async I/O - dæmi
 
@@ -42,21 +42,21 @@ fs.readFile('data.txt', (err, data) => {
 });
 ```
 
-***
+---
 
 ## Callbacks
 
-* Lang flest API í node.js taka við callbacks
-  * Hafa formið `function (err, data) { }`
-* Ef villa kom upp er `err` breytan `truthy` (strengur eða hlutur) og inniheldur upplýsingar um villu
-* Annars eru niðurstöður í `data`
+- Lang flest API í node.js taka við callbacks
+  - Hafa formið `function (err, data) { }`
+- Ef villa kom upp er `err` breytan `truthy` (strengur eða hlutur) og inniheldur upplýsingar um villu
+- Annars eru niðurstöður í `data`
 
-***
+---
 
-* Nýtum okkur fyrir ósamstillar (async) aðgerðir—event loop tekur við beiðni um aðgerð, sér um bókhald og þegar búið, kallar í callback
-* Þurfum að hugsa _ólínulega_ um flæðið í forritunum okkar
+- Nýtum okkur fyrir ósamstillar (async) aðgerðir—event loop tekur við beiðni um aðgerð, sér um bókhald og þegar búið, kallar í callback
+- Þurfum að hugsa _ólínulega_ um flæðið í forritunum okkar
 
-***
+---
 
 ## Línulegt flæði
 
@@ -73,12 +73,13 @@ set();
 console.log(num);
 ```
 
-***
+---
 
 ## Lesið línulega úr skrá
 
 ```javascript
 const fs = require('fs');
+
 let num;
 
 function set() {
@@ -93,18 +94,18 @@ set();
 console.log(num);
 ```
 
-***
+---
 
 ```javascript
 const fs = require('fs');
+
 let num;
 
 function set(callback) {
-  fs.readFile('num.txt', 'utf8',
-    (err, data) => {
-      num = Number.parseInt(data, 10);
-      callback(num);
-    });
+  fs.readFile('num.txt', 'utf8', (err, data) => {
+    num = Number.parseInt(data, 10);
+    callback(num);
+  });
 }
 // set tekur við callback sem skrifar út
 // niðurstöðu *eftir* að skrá er lesin
